@@ -201,6 +201,12 @@ task contract(type: Test, description: 'Runs the consumer Pact tests', group: 'V
     classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 project.ext {
     pacticipant = 'ia_caseApi'
     pacticipantVersion = getCheckedOutGitCommitHash()
@@ -229,7 +235,7 @@ pitest {
     ]
     threads = 10
     outputFormats = ['XML', 'HTML']
-    timestampedReports = true
+    timestampedReports = false
     failWhenNoMutations = false
     verbose = true
     mutationThreshold = 90
@@ -281,23 +287,23 @@ dependencyManagement {
             entry 'commons-fileupload'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.16.0') {
             entry 'jackson-databind'
             entry 'jackson-core'
             entry 'jackson-annotations'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.16.0') {
             entry 'jackson-dataformat-csv'
             entry 'jackson-dataformat-yaml'
        }
 
-        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.16.0') {
             entry 'jackson-datatype-jsr310'
             entry 'jackson-datatype-jdk8'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.module', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.module', version: '2.16.0') {
             entry 'jackson-module-parameter-names'
         }
 
@@ -332,7 +338,6 @@ dependencies {
 
     implementation group: 'org.springframework.security', name: 'spring-security-test'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
     implementation group: 'org.springframework', name: 'spring-context-support'
     implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
@@ -356,19 +361,31 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.3'
     implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
 
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.83'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.83'
+
     implementation group: 'com.google.guava', name: 'guava'
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
 
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.81'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.81'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.13'
 
     implementation group: 'org.javamoney.moneta', name: 'moneta-core', version: '1.4.2'
 
     implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
     implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
     implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
-    implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
-    implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.19.1-RELEASE'
+    implementation(group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0') {
+        exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
+    }
+    implementation(group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.8') {
+        exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
+    }
+    implementation(group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap' , version: '3.1.7') {
+        exclude group: "org.bouncycastle", module: "bcprov-jdk15on"
+    }
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.74'
+    implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.19.2-RELEASE'
 
     compileOnly 'org.projectlombok:lombok'
 
@@ -379,6 +396,7 @@ dependencies {
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap' , version: '4.0.0'
+
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
     testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.pitest}"
     testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:${versions.sonarPitest}"
@@ -401,8 +419,14 @@ dependencies {
     testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
 
+    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0', classifier: 'all', {
+        exclude group: 'commons-io', module: 'commons-io'
+        exclude group: 'org.apache.commons', module: 'commons-lang3'
+    }
+
     testImplementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
     testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
+
 
     functionalTestImplementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.2'
 
@@ -411,8 +435,6 @@ dependencies {
     contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.2.14'
     contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
     contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-
-
 
     contractTestImplementation sourceSets.main.runtimeClasspath
     contractTestImplementation sourceSets.test.runtimeClasspath
